--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Nav - Bar -->
 
         <div class="nav-bar">
-            <img src="img/AK.svg" alt="">
+            <img src="AK.svg" alt="">
             <div class="btns">
                 <a href="#home" class="btn btn-home">Home</a>
                 <a href="#skills" class="btn btn-skills">Skills</a>
@@ -45,12 +45,12 @@
         <section class="skills" id="skills">
             <h1 class="heading">What Do I Know ?</h1>
             <div class="skill-tiles">
-                <img src="img/python.svg" alt="">
-                <img src="img/numpy.svg" alt="">
-                <img src="img/django.svg" alt="">
-                <img src="img/html.svg" alt="">
-                <img src="img/css.svg" alt="">
-                <img src="img/js.svg" alt="">
+                <img src="python.svg" alt="">
+                <img src="numpy.svg" alt="">
+                <img src="django.svg" alt="">
+                <img src="html.svg" alt="">
+                <img src="css.svg" alt="">
+                <img src="js.svg" alt="">
 
             </div>
         </section>
@@ -62,16 +62,16 @@
             <h1 class="heading">Some of My Projects ...</h1>
             <div class="project-tiles">
                 <div class="project 1">
-                    <h4>Calculator</h4><img src="img/calc.svg" alt="">
+                    <h4>Calculator</h4><img src="calc.svg" alt="">
                 </div>
                 <div class="project 2">
-                    <h4>Todo</h4><img src="img/todo.svg" alt="">
+                    <h4>Todo</h4><img src="todo.svg" alt="">
                 </div>
                 <div class="project 3">
-                    <h4>Todo</h4><img src="img/todo.svg" alt="">
+                    <h4>Todo</h4><img src="todo.svg" alt="">
                 </div>
                 <div class="project 4">
-                    <h4>Calculator</h4><img src="img/calc.svg" alt="">
+                    <h4>Calculator</h4><img src="calc.svg" alt="">
                 </div>
 
             </div>
@@ -81,7 +81,7 @@
 
         <div class="contact" id="contact">
             <h1 class="heading">Contact Me !</h1>
-            <img src="img/contact.svg" alt="">
+            <img src="contact.svg" alt="">
             <div class="contact-tile">
                 <form action="">
                     <h4>Name</h4>
