--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <h4 class="heading-sec">Hi...</h4>
             <h1 class="heading">Its Aftab Khan</h1>
-            <img src="img/boy.svg" alt="">
+            <img src="boy.svg" alt="">
             <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum illo amet voluptate pariatur!
                 Tenetur, sint?</p>
 
